documentions des methodes creerUneCollecteDeFond et modifier
