# app/Http/Controllers/api/collecteDeFondsController.php
@@ -11,8 +11,16 @@ use App\Models\User;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
 use PHPOpenSourceSaver\JWTAuth\Facades\JWTAuth;
+use OpenApi\Annotations as OA;
 
-
+/**
+*@OA\SecurityScheme(
+*securityScheme="bearerAuths",
+*type="http",
+*scheme="bearer",
+*bearerFormat="JWT",
+*)
+*/
 class collecteDeFondsController extends Controller
 {
     /**
@@ -30,10 +38,50 @@ class collecteDeFondsController extends Controller
     {
         //
     }
-
-    /**
-     * Store a newly created resource in storage.
-     */
+/**
+ * @OA\Post(
+ *     path="/api/creerCollecte",
+ *     summary="Créer une nouvelle collecte de fonds",
+ *     description="Cette endpoint permet à une fondation de créer une nouvelle collecte de fonds.",
+ *     operationId="createCollecteDeFonds",
+ *     tags={"Creer Une Collecte De Fonds"},
+ *     security={
+ *         {"bearerAuth": {}}
+ *     },
+ *     @OA\RequestBody(
+ *         required=true,
+ *         description="Données de la collecte de fonds à créer",
+ *         @OA\MediaType(
+ *             mediaType="multipart/form-data",
+ *             @OA\Schema(
+ *                 @OA\Property(property="titre", type="string", description="Titre de la collecte"),
+ *                 @OA\Property(property="description", type="string", description="Description de la collecte"),
+ *                 @OA\Property(property="image", type="file", description="Image de la collecte"),
+ *                 @OA\Property(property="objectifFinancier", type="string", description="Objectif financier de la collecte"),
+ *                 @OA\Property(property="numeroCompte", type="string", description="Numéro de compte de la collecte"),
+ *             )
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="La Collecte de Fonds a été bien créée",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="status", type="boolean", example=true),
+ *             @OA\Property(property="message", type="string", example="La Collecte de Fonds a été bien créée"),
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=400,
+ *         description="Erreur lors de la création de la collecte",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="status", type="boolean", example=false),
+ *             @OA\Property(property="message", type="string", example="Erreur lors de la création de la collecte"),
+ *             @OA\Property(property="data", type="null")
+ *         )
+ *     )
+ * )
+ */
+   
     public function store(collecteDeFondsRequest $request)
     {
         // personne connectée
@@ -86,9 +134,68 @@ class collecteDeFondsController extends Controller
         //
     }
 
+   
+
     /**
-     * Update the specified resource in storage.
-     */
+ * @OA\Put(
+ *     path="/api/modifierCollecte/{collecteDeFond}",
+ *     summary="Modifier une collecte de fonds",
+ *     description="Cette endpoint permet à une fondation de modifier une collecte de fonds existante.",
+ *     operationId="updateCollecteDeFonds",
+ *     tags={"Modifier Une Collecte De Fonds"},
+ *     security={
+ *         {"bearerAuth": {}}
+ *     },
+ *     @OA\Parameter(
+ *         name="collecteDeFond",
+ *         in="path",
+ *         required=true,
+ *         description="ID de la collecte de fonds à modifier",
+ *         @OA\Schema(type="integer")
+ *     ),
+ *     @OA\RequestBody(
+ *         required=true,
+ *         description="Données de la collecte de fonds à modifier",
+ *         @OA\MediaType(
+ *             mediaType="multipart/form-data",
+ *             @OA\Schema(
+ *                 @OA\Property(property="titre", type="string", description="Titre de la collecte"),
+ *                 @OA\Property(property="description", type="string", description="Description de la collecte"),
+ *                 @OA\Property(property="image", type="file", description="Nouvelle image de la collecte"),
+ *                 @OA\Property(property="objectifFinancier", type="string", description="Nouvel objectif financier de la collecte"),
+ *                 @OA\Property(property="numeroCompte", type="string", description="Nouveau numéro de compte de la collecte"),
+ *             )
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="La Collecte de Fonds a été bien modifiée",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="status", type="boolean", example=true),
+ *             @OA\Property(property="message", type="string", example="La Collecte de Fonds a été bien modifiée"),
+ *             @OA\Property(property="data", type="object")
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=400,
+ *         description="Erreur lors de la modification de la collecte de fonds",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="status", type="boolean", example=false),
+ *             @OA\Property(property="message", type="string", example="Erreur lors de la modification de la collecte de fonds"),
+ *             @OA\Property(property="data", type="null")
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=403,
+ *         description="La collecte de fonds ne vous appartient pas",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="status", type="boolean", example=false),
+ *             @OA\Property(property="message", type="string", example="La collecte de fonds ne vous appartient pas"),
+ *             @OA\Property(property="data", type="null")
+ *         )
+ *     )
+ * )
+ */
     public function update(modifierCollecteDeFondsRequest $request, collecteDeFonds $collecteDeFond)
     {
         // personne connectée
